# snappy

./: .eslintrc.yml  .gitattributes  .gitignore  .prettierignore  .taplo.toml  .yarnrc.yml  CHANGELOG.md  Cargo.toml  README.md  browser.js  index.d.ts  index.js  index.ts  memory-leak-detect.js  memory-leak-detect.mjs  package.json  rename-optional-deps.js  renovate.json  snappy.wasi-browser.js  snappy.wasi.cjs  tsconfig.json  util.js  util.mjs
.cargo/: config.toml
.github/workflows/: CI.yaml  lint.yaml  memory-leak-detect.yaml
__test__/: index.spec.ts
benchmark/: bench.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
