[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-snappy"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = { version = "3.0.0-alpha.7", features = ["napi5", "serde-json"] }
napi-derive = { version = "3.0.0-alpha" }
snap        = "1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = { version = "0.1" }

[target.'cfg(all(target_os = "linux", not(target_arch = "arm")))'.dependencies]
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto           = true
